[tool.poetry]
name = "obsidian-front-matter-manager"
version = "0.0.1"
description = "Batch Editor for Obsidian Front Matter YAML"
authors = ["Tim Black <timblaktu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
